Fix font size and alignment of code style (#1096)

--- a/themes/hugo-theme-altinn/static/css/theme.css
+++ b/themes/hugo-theme-altinn/static/css/theme.css
@@ -629,8 +629,9 @@ div.notices.tip {
     background: #fbf6bd;
 }
 code, kbd, pre, samp {
-    font-family: "Consolas", menlo, monospace;
-    font-size: 92%;
+    font-family: "Consolas", menlo, monospacef;
+    font-size: 86%;
+    vertical-align: baseline;
 }
 code {
     border-radius: 2px;
@@ -644,10 +645,17 @@ code + .copy-to-clipboard {
     margin-left: -1px;
     border-left: 0 !important;
     font-size: inherit !important;
-    vertical-align: middle;
-    height: 21px;
-    top: 0;
+    vertical-align: text-bottom;
+    padding: 0px 2px;
+    height: 20px;
+    border: 1px solid #fbf0cb;
+    top: 1px;
 }
+
+pre code + .copy-to-clipboard {
+    border: none;
+}
+
 pre {
     padding: 1rem;
     margin: 2rem 0;
@@ -1043,14 +1051,14 @@ td {
     height: 1.45rem;
     top: -1px;
     display: inline-block;
-    vertical-align: middle;
+    vertical-align: baseline;
     position: relative;
     color: #5e5e5e;
     background-color: #FFF7DD;
     margin-left: -.2rem;
     cursor: pointer;
     border-radius: 0 2px 2px 0;
-    margin-bottom: 1px;
+    margin-bottom: 0;
 }
 .copy-to-clipboard:hover {
     background-color: #E8E2CD;
